Implementa feats da SP2 e aprimora feats da SP1

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -35,3 +35,9 @@ spring:
         starttls:
           enable: true
           require: true
+
+springdoc:
+  swagger-ui:
+    groups-order: asc
+    operations-sorter: method
+    tags-sorter: alpha
